--- a/app/src/main/res/layout/fragment_edit_diet.xml
+++ b/app/src/main/res/layout/fragment_edit_diet.xml
@@ -1,90 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="fill_vertical"
-    android:clipToPadding="false"
-    android:isScrollContainer="false"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".fragments.EditDietFragment">
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="fill_vertical"
+            android:clipToPadding="false"
+            android:isScrollContainer="false"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            tools:context=".fragments.EditDietFragment">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <android.support.constraint.Guideline
+            android:id="@+id/left_guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="@dimen/activity_horizontal_margin"/>
+
+        <android.support.constraint.Guideline
+            android:id="@+id/right_guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_end="@dimen/activity_horizontal_margin"/>
+
         <TextView
             android:id="@+id/section_diet_name"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/spacing_small"
             android:text="@string/EditDiet_Name"
             android:textColor="#dd0b16"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintEnd_toEndOf="@id/right_guideline"
+            app:layout_constraintStart_toStartOf="@id/left_guideline"
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <EditText
             android:id="@+id/diet_name"
-            android:layout_width="327dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/spacing_small"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:background="@drawable/bg_edittext"
             android:gravity="center_vertical"
             android:inputType="text"
-            android:minHeight="150dp"
             android:nextFocusDown="@id/diet_description"
             android:padding="@dimen/spacing_small"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/section_diet_name" />
+            app:layout_constraintEnd_toEndOf="@id/right_guideline"
+            app:layout_constraintStart_toStartOf="@id/left_guideline"
+            app:layout_constraintTop_toBottomOf="@id/section_diet_name"/>
 
         <TextView
             android:id="@+id/section_diet_description"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/spacing_small"
             android:text="@string/EditDiet_Description"
             android:textColor="#dd0b16"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/diet_name" />
+            app:layout_constraintEnd_toEndOf="@id/right_guideline"
+            app:layout_constraintStart_toStartOf="@id/left_guideline"
+            app:layout_constraintTop_toBottomOf="@id/diet_name"/>
 
         <EditText
             android:id="@+id/diet_description"
             android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/spacing_small"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:background="@drawable/bg_edittext"
             android:gravity="center_vertical"
-            android:minHeight="150dp"
             android:nextFocusDown="@id/diet_enabled"
             android:padding="@dimen/spacing_small"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/section_diet_description" />
+            app:layout_constraintEnd_toEndOf="@id/right_guideline"
+            app:layout_constraintStart_toStartOf="@id/left_guideline"
+            app:layout_constraintTop_toBottomOf="@id/section_diet_description"/>
 
         <Switch
             android:id="@+id/diet_enabled"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="0dp"
             android:layout_marginTop="@dimen/spacing_small"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:background="@drawable/bg_edittext"
             android:checked="true"
             android:gravity="center_vertical"
             android:nextFocusDown="@id/diet_name"
             android:text="@string/EditDiet_Enabled_Disabled"
             android:textColor="#dd0b16"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/diet_description" />
+            app:layout_constraintEnd_toEndOf="@id/right_guideline"
+            app:layout_constraintStart_toStartOf="@id/left_guideline"
+            app:layout_constraintTop_toBottomOf="@+id/diet_description"/>
 
         <View
             android:id="@+id/grey_line1"
@@ -94,117 +102,131 @@
             android:layout_marginRight="@dimen/spacing_small"
             android:layout_marginTop="@dimen/spacing_small"
             android:background="@color/grey_400"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/diet_enabled" />
+            app:layout_constraintEnd_toEndOf="@id/right_guideline"
+            app:layout_constraintStart_toStartOf="@id/left_guideline"
+            app:layout_constraintTop_toBottomOf="@id/diet_enabled"/>
 
         <TextView
-                android:id="@+id/section_ingredients_authorised"
-            android:layout_width="wrap_content"
+            android:id="@+id/section_ingredients_authorised"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/spacing_small"
             android:text="@string/EditDiet_Authorised_Ingredients"
             android:textColor="#00b400"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/grey_line1" />
+            app:layout_constraintEnd_toEndOf="@id/right_guideline"
+            app:layout_constraintStart_toStartOf="@id/left_guideline"
+            app:layout_constraintTop_toBottomOf="@id/grey_line1"/>
 
         <com.hootsuite.nachos.NachoTextView
             android:id="@+id/ingredients_authorised"
             android:layout_width="0dp"
             android:layout_height="60dp"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/spacing_small"
             android:background="@drawable/bg_edittext"
             android:completionThreshold="1"
             android:gravity="center_vertical"
+            android:hint="@string/EditDiet_Hint_Ingredient_Authorised"
             android:minHeight="150dp"
             android:nextFocusDown="@id/ingredients_soso"
             android:padding="@dimen/spacing_tiny"
-            android:hint="@string/EditDiet_Hint_Ingredient_Authorised"
-            android:textSize="12sp"
+            android:textSize="@dimen/font_small"
             app:chipBackground="#00b400"
             app:chipHeight="30dp"
             app:chipTextColor="@color/grey_800"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/section_ingredients_authorised" />
+            app:layout_constraintEnd_toEndOf="@id/right_guideline"
+            app:layout_constraintStart_toStartOf="@id/left_guideline"
+            app:layout_constraintTop_toBottomOf="@id/section_ingredients_authorised"/>
 
         <TextView
             android:id="@+id/section_ingredients_soso"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/spacing_small"
             android:text="@string/EditDiet_So_So_Ingredients"
             android:textColor="#ff9900"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/ingredients_authorised" />
+            app:layout_constraintEnd_toEndOf="@id/right_guideline"
+            app:layout_constraintStart_toStartOf="@id/left_guideline"
+            app:layout_constraintTop_toBottomOf="@id/ingredients_authorised"/>
 
         <com.hootsuite.nachos.NachoTextView
             android:id="@+id/ingredients_soso"
             android:layout_width="0dp"
             android:layout_height="60dp"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/spacing_small"
             android:background="@drawable/bg_edittext"
             android:completionThreshold="1"
             android:gravity="center_vertical"
+            android:hint="@string/EditDiet_Hint_So_So_Ingredient"
             android:minHeight="150dp"
             android:nextFocusDown="@id/ingredients_unauthorised"
             android:padding="@dimen/spacing_tiny"
-            android:hint="@string/EditDiet_Hint_So_So_Ingredient"
-            android:textSize="12sp"
+            android:textSize="@dimen/font_small"
             app:chipBackground="#ff9900"
             app:chipHeight="30dp"
             app:chipTextColor="@color/grey_800"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/section_ingredients_soso" />
+            app:layout_constraintEnd_toEndOf="@id/right_guideline"
+            app:layout_constraintStart_toStartOf="@id/left_guideline"
+            app:layout_constraintTop_toBottomOf="@id/section_ingredients_soso"/>
 
         <TextView
             android:id="@+id/section_ingredients_unauthorised"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/spacing_small"
             android:text="@string/EditDiet_Unauthorised_Ingredients"
             android:textColor="#ff0000"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/ingredients_soso" />
+            app:layout_constraintEnd_toEndOf="@id/right_guideline"
+            app:layout_constraintStart_toStartOf="@id/left_guideline"
+            app:layout_constraintTop_toBottomOf="@id/ingredients_soso"/>
 
         <com.hootsuite.nachos.NachoTextView
             android:id="@+id/ingredients_unauthorised"
             android:layout_width="0dp"
             android:layout_height="60dp"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/spacing_small"
             android:background="@drawable/bg_edittext"
             android:completionThreshold="1"
             android:gravity="center_vertical"
+            android:hint="@string/EditDiet_Hint_Unauthorised_Ingredient"
             android:minHeight="150dp"
             android:nextFocusDown="@id/diet_name"
             android:padding="@dimen/spacing_tiny"
-            android:hint="@string/EditDiet_Hint_Unauthorised_Ingredient"
-            android:textSize="12sp"
+            android:textSize="@dimen/font_small"
             app:chipBackground="#ff0000"
             app:chipHeight="30dp"
             app:chipTextColor="@color/grey_800"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/section_ingredients_unauthorised" />
+            app:layout_constraintEnd_toEndOf="@id/right_guideline"
+            app:layout_constraintStart_toStartOf="@id/left_guideline"
+            app:layout_constraintTop_toBottomOf="@id/section_ingredients_unauthorised"/>
 
         <Button
             android:id="@+id/save_edits"
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="60dp"
             android:layout_marginTop="@dimen/spacing_small"
             android:background="#4389FA"
             android:text="@string/save_edits"
             android:textColor="@color/white"
+            app:layout_constraintEnd_toEndOf="@id/right_guideline"
+            app:layout_constraintStart_toStartOf="@id/left_guideline"
             app:layout_constraintTop_toBottomOf="@id/ingredients_unauthorised" />
+
+        <ImageButton
+            android:id="@+id/shareButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:src="@drawable/ic_share_black_24dp"
+            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
+            app:layout_constraintStart_toEndOf="@+id/save_edits"
+            app:layout_constraintTop_toBottomOf="@+id/ingredients_unauthorised" />
 
     </android.support.constraint.ConstraintLayout>
 
